--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<<h1>Bazinga</h1>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Testing Title</title>
+  </head>
+  <body>
+
+  </body>
+</html>
