--- a/homepage.html
+++ b/homepage.html
@@ -18,7 +18,8 @@
     <p>Sponsored by (Example)</p>
     <a href="#" class="button">Invest Today!</a>
     <script src="script.js"></script>
-    <img src="https://images.freeimages.com/images/small-previews/2f9/circuit-board-texture-2-1184404.jpg" alt="Test Image 1">
+    </header>
+    <img src="https://i.ibb.co/qgg338n/logo.png" alt="Test Image 1">
     <p>When the insuster is pos x,y
     testing test for later use etc</p>
     <img src="https://images.freeimages.com/images/small-previews/2f9/circuit-board-texture-2-1184404.jpg" alt="Test Image 1">
