--- a/oursponsors.html
+++ b/oursponsors.html
@@ -4,14 +4,12 @@
     <link rel="stylesheet" href=style.css>
  <header>
    <div class="topnav">
-   <a class="active" href="homepage.html">Home Page</a>
+   <img src="https://gcdn.pbrd.co/images/7lyUEbyP85qN.png?o=1" width="160" height="40" alt="Header Logo">
+   <a href="landingpage.html">Home Page</a>
    <a href="ourmission.html">Our Mission</a>
    <a href="ourteam.html">Our Team</a>
-   <a href="oursponsors.html">Our Sponsors</a>
+    <a class="active" href="oursponsors.html">Our Sponsors</a>
  </div>
  </header>
   </head>
-  <body>
-    <script src="script.js"></script>
-  </body>
 </html>
