Our Team Page completed, Navbar normalised

--- a/landingpage.html
+++ b/landingpage.html
@@ -50,12 +50,12 @@
 
   <div class="column">
     <h3>Investments</h3>
-    <p>By signing up to Self Charging Batteriez's crowdfunding or a purchase of any SCB product you agree that SCB is not liable for any loss or damage of physical/digital property.<p>
+    <p>By signing up to Self Charging Batteries's crowdfunding or a purchase of any SCB product you agree that SCB is not liable for any loss or damage of physical/digital property.<p>
     </div>
 
   <div class="column">
     <h3>Refunds</h3>
-    <p>By purchasing a SCB product you are not eligable for a refund without application. To learn more please contact SCB@scammail.com<p>
+    <p>By purchasing a SCB product you are not eligable for a refund without application. To learn more please contact SCB@scammail.com.<p>
     </div>
 
   <div class="column">
