--- a/ourmission.html
+++ b/ourmission.html
@@ -1,45 +1,16 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href=style.css>
- <header>
-   <div class="topnav">
-   <img src="https://gcdn.pbrd.co/images/7lyUEbyP85qN.png?o=1" width="160" height="40" alt="Header Logo">
-   <a href="landingpage.html">Home Page</a>
-   <a class="active" href="ourmission.html">Our Mission</a>
-   <a href="ourteam.html">Our Team</a>
-   <a href="oursponsors.html">Our Sponsors</a>
- </div>
- </header>
+ <html>
+   <head>
+     <link rel="stylesheet" href=style.css>
+         <title>SCB Home</title>
   </head>
-  <body>
-    <script src="script.js"></script>
-    <body>
-      <script src="script.js"></script>
-      <header id="FirstPageImage1">
-      <h1>Investment Oppurtunity</h1>
-      <p>Sponsored by (Example)</p>
-      <a href="#" class="button">Invest Today!</a>
-      <script src="script.js"></script>
-      </header>
-      <img src="https://i.ibb.co/qgg338n/logo.png" alt="TestImage1">
-      <p>When the insuster is pos x,y
-      testing test for later use etc </p alt="RightTextHomepage1">
-      <img src="https://images.freeimages.com/images/small-previews/2f9/circuit-board-texture-2-1184404.jpg" alt="TestImage2">
-      <p>When the insuster is pos x,y
-      testing test for later use etc</p>
-      <img src="https://images.freeimages.com/images/small-previews/2f9/circuit-board-texture-2-1184404.jpg" alt="TestImage3">
-      <p>When the insuster is pos x,y
-      testing test for later use etc</p>
-      <center>
-      <div id="container">
-          <h1>Credits and licenses</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur auctor purus arcu, a ultrices nulla tincidunt ut. Proin bibendum, enim a blandit ullamcorper, elit sem sagittis tellus, a semper lorem justo a libero. Cras rutrum felis felis, et congue sapien fringilla a. Proin finibus erat semper eros sollicitudin, ac ornare velit convallis. Nunc at enim fringilla, iaculis magna mattis, maximus nulla. Integer facilisis diam tempus est aliquet sagittis. Donec varius pharetra nibh.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur auctor purus arcu, a ultrices nulla tincidunt ut. Proin bibendum, enim a blandit ullamcorper, elit sem sagittis tellus, a semper lorem justo a libero. Cras rutrum felis felis, et congue sapien fringilla a. Proin finibus erat semper eros sollicitudin, ac ornare velit convallis. Nunc at enim fringilla, iaculis magna mattis, maximus nulla. Integer facilisis diam tempus est aliquet sagittis. Donec varius pharetra nibh.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur auctor purus arcu, a ultrices nulla tincidunt ut. Proin bibendum, enim a blandit ullamcorper, elit sem sagittis tellus, a semper lorem justo a libero. Cras rutrum felis felis, et congue sapien fringilla a. Proin finibus erat semper eros sollicitudin, ac ornare velit convallis. Nunc at enim fringilla, iaculis magna mattis, maximus nulla. Integer facilisis diam tempus est aliquet sagittis. Donec varius pharetra nibh.</p>
-        </div>
-      </div>
-    </center>
-    </body>
-  </body>
+<body>
+<div class="topnav">
+  <img src="https://i.postimg.cc/3JyMBVpy/logo22-2.png" width="160" height="40" alt="Header Logo">
+  <a href="landingpage.html">Home Page</a>
+  <a class="active" href="ourmission.html">Our Mission</a>
+  <a href="ourteam.html">Our Team</a>
+  <a href="oursponsors.html">Our Sponsors</a>
+</div>
+</body>
 </html>
