--- a/ourteam.html
+++ b/ourteam.html
@@ -2,14 +2,61 @@
 <html>
   <head>
     <link rel="stylesheet" href=style.css>
- <header>
-   <div class="topnav">
-   <img src="https://gcdn.pbrd.co/images/7lyUEbyP85qN.png?o=1" width="160" height="40" alt="Header Logo">
+        <title>SCB Home</title>
+ </head>
+<body>
+  <div class="topnav">
+   <img src="https://i.postimg.cc/3JyMBVpy/logo22-2.png" width="160" height="40" alt="Header Logo">
    <a href="landingpage.html">Home Page</a>
    <a href="ourmission.html">Our Mission</a>
-   <a class="active" href="ourteam.html">Our Team</a>
+   <a class="active" href="landingpage.html">Our Team</a>
    <a href="oursponsors.html">Our Sponsors</a>
  </div>
- </header>
-  </head>
+
+ <div class="teamdiv">
+   <p>Introducing our team!</p>
+   <table style="Width:100%">
+     <tr>
+       <td style="width:20%"><img src="https://i.postimg.cc/G3JbZZSH/test1.jpg" class="phototeam"</td>
+       <td>Fredrick Swindle, CEO of Self Charging Batteries</td>
+     </tr>
+     <tr>
+       <td style="width:20%"><img src="https://i.postimg.cc/NMvwn466/test3.jpg" class="phototeam"</td>
+       <td>Lily Conellia, Director of Marketing</td>
+     </tr>
+     <tr>
+       <td style="width:20%"><img src="https://i.postimg.cc/3xW70Wrv/test2.jpg" class="phototeam"</td>
+       <td>Andrew Bunco, Lithium Enthusiast</td>
+     </tr>
+
+   </table>
+ </div>
+ <div class="mydiv">
+ <div class="row">
+   <div class="mybottomheader">
+     Credits and licenses
+   </div>
+   <div class="column">
+     <h3>Image licenses</h3>
+     <p>Every image was taken from a royalty-free stock image source. For more information please call +1 409-948-4512.<p>
+     </div>
+
+   <div class="column">
+     <h3>Investments</h3>
+     <p>By signing up to Self Charging Batteries's crowdfunding or a purchase of any SCB product you agree that SCB is not liable for any loss or damage of physical/digital property.<p>
+     </div>
+
+   <div class="column">
+     <h3>Refunds</h3>
+     <p>By purchasing a SCB product you are not eligable for a refund without application. To learn more please contact SCB@scammail.com.<p>
+     </div>
+
+   <div class="column">
+     <h3>Personal Data Collection</h3>
+     <p>By looking at this website you allow your data to be collected by SCB and any of its partners for targeted advertising, threats, and more.<p>
+     </div>
+   </div>
+
+ </div>
+</body>
 </html>
