--- a/oursponsors.html
+++ b/oursponsors.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href=style.css>
- <header>
-   <div class="topnav">
-   <img src="https://gcdn.pbrd.co/images/7lyUEbyP85qN.png?o=1" width="160" height="40" alt="Header Logo">
-   <a href="landingpage.html">Home Page</a>
-   <a href="ourmission.html">Our Mission</a>
-   <a href="ourteam.html">Our Team</a>
-    <a class="active" href="oursponsors.html">Our Sponsors</a>
- </div>
- </header>
+ <html>
+   <head>
+     <link rel="stylesheet" href=style.css>
+         <title>SCB Home</title>
   </head>
+<body>
+<div class="topnav">
+  <img src="https://i.postimg.cc/3JyMBVpy/logo22-2.png" width="160" height="40" alt="Header Logo">
+  <a href="landingpage.html">Home Page</a>
+  <a href="ourteam.html">Our Mission</a>
+  <a href="ourteam.html">Our Team</a>
+  <a class="active" href="ourmission.html">Our Sponsors</a>
+</div>
 </html>
+</body>
