Sponsor Page Completed

--- a/ourmission.html
+++ b/ourmission.html
@@ -12,5 +12,6 @@
   <a href="ourteam.html">Our Team</a>
   <a href="oursponsors.html">Our Sponsors</a>
 </div>
+ <header id="MissionImage">
 </body>
 </html>
