--- a/oursponsors.html
+++ b/oursponsors.html
@@ -8,9 +8,26 @@
 <div class="topnav">
   <img src="https://i.postimg.cc/3JyMBVpy/logo22-2.png" width="160" height="40" alt="Header Logo">
   <a href="landingpage.html">Home Page</a>
-  <a href="ourteam.html">Our Mission</a>
+  <a href="ourmission.html">Our Mission</a>
   <a href="ourteam.html">Our Team</a>
-  <a class="active" href="ourmission.html">Our Sponsors</a>
+  <a class="active" href="oursponsors.html">Our Sponsors</a>
 </div>
-</html>
+<div class="sponsordiv">
+  <p>Thank you to our Sponsors!</p>
+  <table style="Width:100%">
+    <tr>
+      <td style="width:20%"><img src="https://st2.depositphotos.com/3591429/5246/i/950/depositphotos_52462601-stock-photo-antivirus-protection-system.jpg" class="photosponsor"</td>
+      <td>A-VPN. Keep your files secure with A-VPN, world-leading in privacy and security.</td>
+    </tr>
+    <tr>
+      <td style="width:20%"><img src="https://media.discordapp.net/attachments/686943578001375317/869576305081991198/HeresyStudios.gif" class="photosponsor"</td>
+      <td>Heresy Development, the most heretical development available. Pick up titles such as "Adventures of Chungus," and "Hypevan 4" today!</td>
+    </tr>
+    <tr>
+      <td style="width:20%"><img src="https://media.gettyimages.com/photos/man-holding-raw-broccoli-with-mouth-open-side-view-closeup-picture-id200564201-002" class="photosponsor"</td>
+      <td>Connection, Better, Together. Join the network today using code "Sugma" for 15% off on your next purchase.</td>
+    </tr>
+
 </body>
+  
+</html>
