--- a/ourmission.html
+++ b/ourmission.html
@@ -13,5 +13,47 @@
   <a href="oursponsors.html">Our Sponsors</a>
 </div>
  <header id="MissionImage">
+   <iframe width="420" height="315"
+   src="https://youtu.be/dhKLreUYv-o">
+   </iframe>
 </body>
+<header>
+  Promotional Video
+</header>
+</header>
+<div class="missiondiv">
+  <header>
+    Why choose us?
+  </header>
+<p>We at Self Charging Battries have one goal. To bring you the batteries you deserve. Aren't you tired of having to charge batteries over and over?
+    We are too. That is why we created our No-Charge-Batteries(TM). With our patented "Spirit Charge" technology, these batteries absorb "Spirtual Energy" and negativity to create a long-lasting
+    and fast-charging battery. SCB, it's time for a charge.</p>
+</div>
+<div class="mydiv">
+<div class="row">
+  <div class="mybottomheader">
+    Credits and licenses
+  </div>
+  <div class="column">
+    <h3>Image licenses</h3>
+    <p>Every image was taken from a royalty-free stock image source. For more information please call +1 409-948-4512.<p>
+    </div>
+
+  <div class="column">
+    <h3>Investments</h3>
+    <p>By signing up to Self Charging Batteries's crowdfunding or a purchase of any SCB product you agree that SCB is not liable for any loss or damage of physical/digital property.<p>
+    </div>
+
+  <div class="column">
+    <h3>Refunds</h3>
+    <p>By purchasing a SCB product you are not eligable for a refund without application. To learn more please contact SCB@scammail.com.<p>
+    </div>
+
+  <div class="column">
+    <h3>Personal Data Collection</h3>
+    <p>By looking at this website you allow your data to be collected by SCB and any of its partners for targeted advertising, threats, and more.<p>
+    </div>
+  </div>
+
+</div>
 </html>
